--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "axios": "^1.10.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
